# sis_prototipo

./: .env  .gitignore  .travis.yml  CONTRIBUTORS.txt  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
core/: urls.py
dengue/: admin.py  api_views.py  models.py  serializers.py  urls.py  views.py
dengue/dash_apps/: analisis_dengue.py  callbacks.py  clustering_dengue.py  series.py  series_dengue.py  utils.py  vectores.py  vectores2.py
dengue/migrations/: 0001_initial.py  0002_initial.py  0003_remove_vector_cve_diag_final.py  0004_rename_loc_vector_geometry_and_more.py  0005_vector_fol_id.py  0006_vector_des_ocupacion.py  0007_remove_vector_creado.py  0008_remove_vector_precision.py  0009_remove_vector_localidad_vector_municipio.py  0010_datosagregados.py  0013_vector_ide_fec_nac.py  0014_auto_20220705_1022.py
docs/: Makefile  conf.py  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
epidemic/: apps.py
geo/: api_views.py  models.py  serializers.py  urls.py  views.py
geo/dash_apps/: exploracion.py
geo/migrations/: 0001_initial.py  0002_alter_localidad_cvegeo.py  0002_auto_20211027_2144.py  0003_alter_localidad_cvegeo.py  0003_auto_20211029_0222.py  0004_auto_20211029_0249.py  0004_localidad_puntual.py  0005_alter_demograficos_object_id.py  0005_auto_20211030_0139.py  0006_remove_localidad_ageb.py  0007_auto_20211102_1953.py  0008_localidadrural_cve_mza.py  0009_auto_20211102_2334.py  install_extensions.py
geo/utils/: load_geojson.py  load_infra.py  load_pob.py  load_pob2.py  load_shp.py  load_shp2.py  prep_shp.py
prototipo/: api.py  routing.py  settings.py  urls.py
sis_prototipo/templates/: base.html
sis_prototipo/utils/: embarazadas.py  utils.py
static/dengue/: main.css
templates/core/: base.html  home.html
templates/dengue/: analisis_dengue.html  series.html  vectores.html  vectores2.html
templates/geo/: exploracion.html
utility/: setup.sh
(+114 files in other folders)
